--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -8,7 +8,7 @@ title: "About"
 <div class="user_bio column is-9">
   <h2 class="name"><span>Tatsuro Moriyama</span>WEBエンジニア・WEBデザイン</h2>
   <p>1985年 愛知県豊橋市出身</p>
-  <p>地元の通販会社にWEBデザイナー・WEBエンジニアとして就職。社内外の業務アプリケーションを作成してきました。なので、一般的なWEB制作会社とは少し違った、『ECに関連するお仕事』や『その会社ごとの特殊なケース・問題』を解決するのが得意です。</p>
+  <p>地元の通販会社にWEBデザイナー・WEBエンジニアとして就職。社内外の業務アプリケーションを作成してきました。なので、一般的なWEB制作会社とは少し違った、『ECに関連するお仕事』や『その会社ごとの特殊なケース・問題』を解決するのが得意です。そういった記事をブログに書いていきたいと思います。</p>
   <p>いつか学んだ知識や技術で人の役にたつ事を目標に日々勉強しています。音楽とウイスキーとRubyが好きです。最近はキャンプと釣り(ルアーも餌も)も好きです。</p>
   <h3 class="skill">できること</h3>
   <ul>
@@ -29,7 +29,12 @@ title: "About"
       </ul>
     </li>
     <li>Javascript</li>
-    <li>AWS</li>
+    <li>AWS
+      <ul>
+        <li>Lambda</li>
+        <li>S3</li>
+        <li>ElasticTranscoder</li>
+      </ul></li>
     <li>Illustrator</li>
     <li>Photoshop</li>
   </ul>
