--- a/content/contact/_index.html
+++ b/content/contact/_index.html
@@ -1,8 +1,8 @@
 ---
-title: "Contact"
+title: "お問い合わせ"
 ---
 <div>
-  <h1 class="title">Contact</h1>
+  <h1 class="title">お問い合わせ</h1>
 </div>
 
 <div>
