logo, icon, デザインの変更

--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -1,46 +1,66 @@
 ---
 title: "About"
 ---
-<div class="columns">
+<section class="aboutus">
+  <div class="columns">
   <div class="user_image column is-3">
-    <img class="user" src="https://avatars1.githubusercontent.com/u/6788936?v=4">
+    <img src="/icon.svg">
   </div>
-
-  <div class="user_bio column is-9">
+  <div class="column is-9">
+    <h2 class="title">「すきせか」について</h2>
     <article>
-      <h2 class="name"><span>Tatsuro Moriyama</span>WEBエンジニア・WEBデザイナー</h2>
-      <p>1985年 愛知県豊橋市出身</p>
-      <p>地元の通販会社にWEBデザイナー・WEBエンジニアとして就職。フロントサイドから業務アプリケーションまで、いろいろ制作・開発してきました。なので、一般的なWEB制作会社とは少し違った、『ECに関連するお仕事』や『その会社ごとの特殊なケース・問題』を解決するのが得意です。そういった記事をブログに書いていきたいと思います。</p>
-      <p>また、いつか学んだ知識や技術で人の役にたつ事ができたらいいなと、日々勉強しています。</p>
-      <p>音楽とウイスキーとRubyが好きです。最近はロードバイク、キャンプ、釣り(ルアーも餌も)も好きです。</p>
-      <h3 class="skill">できること</h3>
-      <ul>
-        <li>HTML5</li>
-        <li>CSS(sass)
-          <ul>
-            <li>Bootstrap</li>
-            <li>Bulma</li>
-          </ul>
-        </li>
-        <li>Ruby
-          <ul>
-            <li>Ruby on Rails</li>
-            <li>Sinatra</li>
-            <li>Middleman</li>
-            <li>Jekyll</li>
-            <li>Hologram</li>
-          </ul>
-        </li>
-        <li>Javascript</li>
-        <li>AWS
-          <ul>
-            <li>Lambda</li>
-            <li>S3</li>
-            <li>ElasticTranscoder</li>
-          </ul></li>
-        <li>Illustrator</li>
-        <li>Photoshop</li>
-      </ul>
+      <p>もともとは<strong>「すきなことをすきといえるせかいに」</strong>という言葉をモットーにブログを書いていましたが、もっと覚えやすく、さらに<strong>「すきなものであふれるせかいに」</strong><strong>「すきなことがみつかるせかいに」</strong>などといった言葉などもテーマに含みたいため、抽象的な「すきせか」という言葉を選びました。
+      </p>
+      <p>ぼく自身の好きなことを好き！と書くことで、「わたしもコレ好き！」と言える世界になればいいなと思います。また、読者の方も「これ初めて知った！好き！」というふうに好きが広がっていったらいいなと思います。</p>
+      </p>
     </article>
   </div>
 </div>
+</section>
+
+<section class="user_bio">
+  <div class="columns">
+    <div class="user_image column is-3">
+      <img class="user" src="https://avatars1.githubusercontent.com/u/6788936?v=4">
+    </div>
+
+    <div class="column is-9">
+      <h2 class="title">書いている人について</h2>
+      <h2 class="name"><span>Tatsuro Moriyama</span>WEBエンジニア・WEBデザイナー</h2>
+      <article>
+        <p>1985年 愛知県豊橋市出身</p>
+        <p>地元の通販会社にWEBデザイナー・WEBエンジニアとして就職。フロントサイドから業務アプリケーションまで、いろいろ制作・開発してきました。なので、一般的なWEB制作会社とは少し違った、『ECに関連するお仕事』や『その会社ごとの特殊なケース・問題』を解決するのが得意です。そういった記事をブログに書いていきたいと思います。</p>
+        <p>また、いつか学んだ知識や技術で人の役にたつ事ができたらいいなと、日々勉強しています。</p>
+        <p>音楽とウイスキーとRubyが好きです。最近はロードバイク、キャンプ、釣り(ルアーも餌も)も好きです。</p>
+        <h3 class="skill">できること</h3>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS(sass)
+            <ul>
+              <li>Bootstrap</li>
+              <li>Bulma</li>
+            </ul>
+          </li>
+          <li>Ruby
+            <ul>
+              <li>Ruby on Rails</li>
+              <li>Sinatra</li>
+              <li>Middleman</li>
+              <li>Jekyll</li>
+              <li>Hologram</li>
+            </ul>
+          </li>
+          <li>Javascript</li>
+          <li>AWS
+            <ul>
+              <li>Lambda</li>
+              <li>S3</li>
+              <li>ElasticTranscoder</li>
+            </ul></li>
+          <li>Illustrator</li>
+          <li>Photoshop</li>
+        </ul>
+      </article>
+    </div>
+  </div>
+</section>
