おともだちになりましょうを追加

--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -21,7 +21,17 @@ title: "About"
 <section class="user_bio">
   <div class="columns">
     <div class="user_image column is-3">
-      <img class="user" src="https://avatars1.githubusercontent.com/u/6788936?v=4">
+      <p id="lets_be_friends">おともだちになりましょう！</p>
+      <script>
+        let txt = document.getElementById('lets_be_friends').innerHTML.split('')
+        document.getElementById('lets_be_friends').innerHTML = ''
+        for (i=0; i<txt.length; i++) {
+          let span = document.createElement('span')
+          span.innerHTML = txt[i]
+          document.getElementById('lets_be_friends').appendChild(span)
+        }
+      </script>
+      <img class="user_photo" src="https://avatars1.githubusercontent.com/u/6788936?v=4">
     </div>
 
     <div class="column is-9">
