--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -38,6 +38,12 @@ title: "About"
       <h2 class="title">書いている人について</h2>
       <h2 class="name"><span>Tatsuro Moriyama</span>WEBエンジニア・WEBデザイナー</h2>
       <article>
+        <ul>
+          <li><a href="https://twitter.com/t4traw">Twitter</a></li>
+          <li><a href="https://github.com/t4traw">GitHub</a></li>
+          <li><a href="https://www.instagram.com/t4trawm/">Instagram</a></li>
+          <li><a href="https://www.behance.net/t4traw">Behance</a></li>
+        </ul>
         <p>1985年 愛知県豊橋市出身</p>
         <p>地元の通販会社にWEBデザイナー・WEBエンジニアとして就職。フロントサイドから業務アプリケーションまで、いろいろ制作・開発してきました。なので、一般的なWEB制作会社とは少し違った、『ECに関連するお仕事』や『その会社ごとの特殊なケース・問題』を解決するのが得意です。そういった記事をブログに書いていきたいと思います。</p>
         <p>また、いつか学んだ知識や技術で人の役にたつ事ができたらいいなと、日々勉強しています。</p>
