あばうとページにキーワードを追加

--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -37,8 +37,20 @@ title: "About"
         <p>1985年 愛知県豊橋市出身</p>
         <p>地元の通販会社にWEBデザイナー・WEBエンジニアとして就職。フロントサイドから業務アプリケーションまで、いろいろ制作・開発してきました。なので、一般的なWEB制作会社とは少し違った、『ECに関連するお仕事』や『その会社ごとの特殊なケース・問題』を解決するのが得意です。そういった記事をブログに書いていきたいと思います。</p>
         <p>また、いつか学んだ知識や技術で人の役にたつ事ができたらいいなと、日々勉強しています。</p>
-        <p>音楽とウイスキーとRubyが好きです。最近はロードバイク、キャンプ、釣り(ルアーも餌も)も好きです。</p>
-        <h3 class="skill">できること</h3>
+        <h3 class="is-mid">すきなキーワード</h3>
+        <ul>
+          <li>音楽</li>
+          <li>ウイスキー</li>
+          <li>Ruby</li>
+          <li>ロードバイク</li>
+          <li>キャンプ</li>
+          <li>ビデオゲーム（最近はポケモン・ポケカ）</li>
+          <li>ドイツゲーム・アナログゲーム</li>
+          <li>ちょっと本</li>
+          <li>珈琲</li>
+        </ul>
+        <p>↑のキーワードが好きな方はぜひ<a href="https://twitter.com/t4traw">Twitter(@t4traw)</a>でフォローをしてください！</p>
+        <h3 class="is-mid">できること</h3>
         <ul>
           <li>HTML5</li>
           <li>CSS(sass)
