S3のパスを移動

--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -68,7 +68,12 @@ title: "About"
               <li>Hologram</li>
             </ul>
           </li>
-          <li>Javascript</li>
+          <li>Javascript
+            <ul>
+              <li>Vue</li>
+              <li>Electron</li>
+            </ul>
+          </li>
           <li>AWS
             <ul>
               <li>Lambda</li>
