プロフィール更新

--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -42,9 +42,10 @@ title: "About"
           <li>音楽</li>
           <li>ウイスキー</li>
           <li>Ruby</li>
+          <li>Vue.js</li>
           <li>ロードバイク</li>
           <li>キャンプ</li>
-          <li>ビデオゲーム（最近はポケモン・ポケカ）</li>
+          <li>ビデオゲーム</li>
           <li>ドイツゲーム・アナログゲーム</li>
           <li>ちょっと本</li>
           <li>珈琲</li>
@@ -68,9 +69,10 @@ title: "About"
               <li>Hologram</li>
             </ul>
           </li>
-          <li>Javascript
+          <li>JavaScript
             <ul>
               <li>Vue</li>
+              <li>Nuxt</li>
               <li>Electron</li>
             </ul>
           </li>
@@ -79,7 +81,8 @@ title: "About"
               <li>Lambda</li>
               <li>S3</li>
               <li>ElasticTranscoder</li>
-            </ul></li>
+            </ul>
+          </li>
           <li>Illustrator</li>
           <li>Photoshop</li>
         </ul>
