--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -9,13 +9,13 @@ date: 2020-06-03
     <article>
       <ul>
         <li>
-          <a href="https://twitter.com/t4traw" target="_blank">Twitter</a>
+          <a href="https://twitter.com/t4traw" target="_blank" rel="noreferrer">Twitter</a>
         </li>
         <li>
-          <a href="https://github.com/t4traw" target="_blank">GitHub</a>
+          <a href="https://github.com/t4traw" target="_blank" rel="noreferrer">GitHub</a>
         </li>
         <li>
-          <a href="https://www.instagram.com/t4trawm/" target="_blank">Instagram</a>
+          <a href="https://www.instagram.com/t4trawm/" target="_blank" rel="noreferrer">Instagram</a>
         </li>
       </ul>
       <p>1985年 愛知県豊橋市出身</p>
